varnish/tests/fail/error_fn_args_logic.stderr
error: unsupported argument type
 --> tests/fail/error_fn_args_logic.rs:4:19
  |
4 |     pub fn string(s: String) {}
  |                   ^

error: This params must be declared as `&mut Option<Box<...>>`
 --> tests/fail/error_fn_args_logic.rs:5:51
  |
5 |     pub fn task_arg_non_mut(#[shared_per_task] a: Option<i64>) {}
  |                                                   ^^^^^^

error: This params must be declared as `&mut Option<Box<...>>`
 --> tests/fail/error_fn_args_logic.rs:6:52
  |
6 |     pub fn task_arg_non_mut2(#[shared_per_task] a: Option<&i64>) {}
  |                                                    ^^^^^^

error: This params must be declared as `Option<&...>`
 --> tests/fail/error_fn_args_logic.rs:7:49
  |
7 |     pub fn vcl_arg_non_ref(#[shared_per_vcl] a: Option<i64>) {}
  |                                                 ^^^^^^

error: Event parameters are only allowed in event handlers. Try adding `#[event]` to this function.
 --> tests/fail/error_fn_args_logic.rs:8:25
  |
8 |     pub fn on_non_event(a: Event) {}
  |                         ^

error: Event functions can only have `Ctx`, `#[event] Event`, and `#[shared_per_vcl] &mut Option<Box<T>>` arguments.
  --> tests/fail/error_fn_args_logic.rs:10:25
   |
10 |     pub fn on_event_arg(a: i64) {}
   |                         ^

error: This params must be declared as `&mut Option<Box<...>>`
  --> tests/fail/error_fn_args_logic.rs:12:52
   |
12 |     pub fn on_event_arg_task(#[shared_per_task] a: Option<Box<i64>>) {}
   |                                                    ^^^^^^

error: This params must be declared as `&mut Option<Box<...>>`
  --> tests/fail/error_fn_args_logic.rs:14:50
   |
14 |     pub fn on_event_arg_vcl(#[shared_per_vcl] a: Option<&i64>) {}
   |                                                  ^^^^^^

error: This type of argument must be declared as optional with `Option<...>`
  --> tests/fail/error_fn_args_logic.rs:15:32
   |
15 |     pub fn socket_addr_non_opt(_v: SocketAddr) {}
   |                                ^^

error: #[vcl_name] params are only allowed in object constructors
  --> tests/fail/error_fn_args_logic.rs:17:33
   |
17 |     pub fn vcl_name(#[vcl_name] a: &str) {}
   |                                 ^
